<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recipe App</string>
    <string name="recipeList">Recipe List</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="updateRecipe">Update Recipe</string>
    <string name="deleteRecipe">Delete Recipe</string>
    <string name="mealType">Meal Type</string>
    <string name="addMealType">Add Category</string>
    <string name="mealList">Category List</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="mealName">Meal Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="category">Category</string>
    <string name="saveChanges">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="goBack">Go Back</string>
</resources>